Fix sizing of timeline logo on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3292,7 +3292,10 @@
 	--cd-color-6: #aaa;
 }
 
+
 .cd-timeline__img img {
-    width: 60px;
-    height: 60px;
+    width: 40.176px;
+    height: 40.176px;
 }
+
+
